kustomize/mako-accounts-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mako-accounts-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mako-accounts-web
  template:
    metadata:
      labels:
        app: mako-accounts-web
    spec:
      containers:
        - name: mako-accounts-web
          image: "europe-central2-docker.pkg.dev/mako-bank/mako-images/mako-accounts-web:placeholder"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4202
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "64Mi"
              cpu: "100m"
              ephemeral-storage: "200Mi"
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: mako-accounts-web-nginx-config
