kustomize/mako-accounts-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mako-accounts-web
  annotations:
    cloud.google.com/backend-config: '{"default": "mako-accounts-web-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 4202
      targetPort: 4202
      protocol: TCP
      name: http
  selector:
    app: mako-accounts-web
